# Web_Scraping

./: .gitignore  .pre-commit-config.yaml  2025_Tarea01_AD.ipynb  LICENSE  README.md  const.py  datos_serie.py  main.py  pyproject.toml
src/: __init__.py  const.py  data_frame.py  datos_serie.py  extraer_datos.py  main.py  request.py
src/analisis/: __init__.py  main.py  utilities.py
src/scraping/: __init__.py  const.py  data_frame.py  datos_serie.py  extraer_datos.py  fusion_pkl.py  main.py  request.py
