[project]
name = "Web_Scraping"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AntoCreed777", email = "abenavides@desem.cl"},
]
dependencies = [
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "black>=25.1.0",
    "isort>=6.0.1"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
